fix center spacing

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
 #center {
     margin-left:auto;
     margin-right:auto;
-    width:600px;
+    width:620px;
 }
 
 #blurb {
